Проектная работа 4. Версия 1. Исправление замечаний автотеста

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         <div class="image-block">
           <p class="lable">Страдания</p>
           <img
-            class="image image-filter-invert"
+            class="image image-filter-mn"
             src="images/giphy_7.gif"
             alt="Собака"
           />
