Проектная работа 4. Версия 2. Сжатие размера проекта

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p class="lable">Непонимание</p>
           <img
             class="image image-filter-brightness"
-            src="images/giphy_1.gif"
+            src="images/giphy_1.jpg"
             alt="Собака"
           />
         </div>
@@ -111,7 +111,7 @@
           <p class="lable">Поехали</p>
           <img
             class="image image-filter-grayscale"
-            src="images/giphy_2.gif"
+            src="images/giphy_2.jpg"
             alt="Собака"
           />
         </div>
@@ -193,7 +193,7 @@
           <p class="lable">Поехали</p>
           <img
             class="image image-filter-saturate"
-            src="images/giphy_3.gif"
+            src="images/giphy_3.jpg"
             alt="Собака"
           />
         </div>
@@ -273,7 +273,7 @@
           <p class="lable">Продолжаем</p>
           <img
             class="image image-filter-sepia"
-            src="images/giphy_4.gif"
+            src="images/giphy_4.jpg"
             alt="Собака"
           />
         </div>
@@ -355,7 +355,7 @@
           <p class="lable">Супер</p>
           <img
             class="image image-filter-contrast"
-            src="images/giphy_5.gif"
+            src="images/giphy_5.jpg"
             alt="Собака"
           />
         </div>
@@ -438,7 +438,7 @@
           <p class="lable">Боль</p>
           <img
             class="image image-filter-opacity"
-            src="images/giphy_6.gif"
+            src="images/giphy_6.jpg"
             alt="Собака"
           />
         </div>
@@ -518,7 +518,7 @@
           <p class="lable">Страдания</p>
           <img
             class="image image-filter-mn"
-            src="images/giphy_7.gif"
+            src="images/giphy_7.jpg"
             alt="Собака"
           />
         </div>
@@ -600,7 +600,7 @@
           <p class="lable">Еще рывок</p>
           <img
             class="image image-filter-brightness image-filter-contrast"
-            src="images/giphy_8.gif"
+            src="images/giphy_8.jpg"
             alt="Собака"
           />
         </div>
