--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       <article class="card-width">
         <h2 class="card-title-text">2 спринт: Погоня за идеалом</h2>
         <figure class="image-block">
-          <figcaptionp class="lable">Продолжаем</figcaptionp>
+          <figcaption class="lable">Продолжаем</figcaption>
           <picture>
             <img
               class="image image-filter-sepia"
