Проектная работа 4. Версия 4. Устранение замечаний ревью

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button" type="button">
+          <button class="card__like-button button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -178,7 +178,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button" type="button">
+          <button class="card__like-button button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -258,7 +258,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button" type="button">
+          <button class="card__like-button button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -340,7 +340,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button" type="button">
+          <button class="card__like-button button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -423,7 +423,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button" type="button">
+          <button class="card__like-button button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -503,7 +503,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button" type="button">
+          <button class="card__like-button button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -585,7 +585,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button" type="button">
+          <button class="card__like-button button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -668,12 +668,12 @@
               />
             </svg>
           </button>
-          <button class="card__like-button" type="button">
+          <button class="card__like-button button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
-      <button class="button-save" onclick="window['dialog'].showModal()" type="button">
+      <button class="button-save button" onclick="window['dialog'].showModal()" type="button">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="svg_floopy"
@@ -697,7 +697,7 @@
           Вставьте дискету, чтобы продолжить
         </p>
       </div>
-      <button onclick="window['dialog'].close()" class="button-ok" type="button">
+      <button onclick="window['dialog'].close()" class="button-ok button" type="button">
         <span class="button__text button-ok-text">OK</span>
       </button>
     </dialog>
